--- a/client/src/pages/CollectionDetail.css
+++ b/client/src/pages/CollectionDetail.css
@@ -333,7 +333,7 @@
 .collection-detail-page .book-cover img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .collection-detail-page .book-cover .progress-bar-overlay {
