--- a/client/src/pages/SeriesDetail.css
+++ b/client/src/pages/SeriesDetail.css
@@ -101,7 +101,7 @@
 .series-books-grid .audiobook-cover img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .series-books-grid .audiobook-cover-placeholder {
